# dice-roll

./: Cargo.toml  README.md
src/: main.rs  parser.rs  roller.rs
tests/: parser_tests.rs  roller_tests.rs
